# handlers/signin.go
@@ -10,12 +10,31 @@ import (
 	"github.com/golang-jwt/jwt/v5"
 )
 
-type SigninInput struct {
-	Username string `json:"username"`
-	Password string `json:"password"`
+type SigninSuccessResponse struct {
+	Status     string      `json:"status" example:"success"`
+	StatusCode int         `json:"status_code" example:"200"`
+	Data       SuccessData `json:"data"`
 }
 
+type SuccessData struct {
+	Username  string    `json:"username"`
+	UserID    uint      `json:"userId"`
+	CreatedAt time.Time `json:"createdAt"`
+	Token     string    `json:"token"`
+}
+
+// @Tags Auth
+//
+// @Router /auth/signin [post]
+// @Summary Basic token based Auth
+// @Description Signin with username and password, you will receive a token which u will have to provide in the header of subsequent requests at /api gateway
+// @Accept json
+// @Produce json
+// @failure 500,404,401,400 {object} ErrorModel
+// @Success 200 {object} SigninSuccessResponse
+// @Param data body SigninInput true "username and password input"
 func Signin(context *fiber.Ctx) error {
+
 	// Login handler
 
 	signinInput := new(SigninInput)
@@ -23,10 +42,10 @@ func Signin(context *fiber.Ctx) error {
 	// parsing request body
 
 	if signinInputError := context.BodyParser(signinInput); signinInputError != nil {
-		return context.Status(fiber.StatusBadRequest).JSON(fiber.Map{
-			"status":      "error",
-			"status_code": fiber.StatusBadRequest,
-			"message":     signinInputError.Error(),
+		return context.Status(fiber.StatusBadRequest).JSON(ErrorModel{
+			Status:     "error",
+			StatusCode: fiber.StatusBadRequest,
+			Message:    signinInputError.Error(),
 		})
 	}
 
@@ -39,28 +58,28 @@ func Signin(context *fiber.Ctx) error {
 	user, userError := utils.GetUser(username)
 
 	if userError == utils.NOTFOUND {
-		return context.Status(fiber.StatusNotFound).JSON(fiber.Map{
-			"status":      "error",
-			"message":     fmt.Sprintf("given username %s is not found in our database.", username),
-			"status_code": fiber.StatusNotFound,
+		return context.Status(fiber.StatusNotFound).JSON(ErrorModel{
+			Status:     "error",
+			Message:    fmt.Sprintf("given username %s is not found in our database.", username),
+			StatusCode: fiber.StatusNotFound,
 		})
 	}
 
 	if userError == utils.CUSTOMERROR {
-		return context.Status(fiber.StatusInternalServerError).JSON(fiber.Map{
-			"status":      "error",
-			"message":     "Error in responding to the request",
-			"status_code": fiber.StatusInternalServerError,
+		return context.Status(fiber.StatusInternalServerError).JSON(ErrorModel{
+			Status:     "error",
+			Message:    "Error in responding to the request",
+			StatusCode: fiber.StatusInternalServerError,
 		})
 	}
 
 	// check if the password is matched
 
 	if isPasswordVerified := utils.VerifyPasswordHash(user.Password, signinInput.Password); !isPasswordVerified {
-		return context.Status(fiber.StatusUnauthorized).JSON(fiber.Map{
-			"status":      "error",
-			"message":     fmt.Sprintf("password given for user %s does not match.", username),
-			"status_code": fiber.StatusUnauthorized,
+		return context.Status(fiber.StatusUnauthorized).JSON(ErrorModel{
+			Status:     "error",
+			Message:    fmt.Sprintf("password given for user %s does not match.", username),
+			StatusCode: fiber.StatusUnauthorized,
 		})
 	}
 
@@ -79,23 +98,23 @@ func Signin(context *fiber.Ctx) error {
 	token, tokenError := jwtResponse.SignedString([]byte(os.Getenv("JWT_SECRET")))
 
 	if tokenError != nil {
-		return context.Status(fiber.StatusInternalServerError).JSON(fiber.Map{
-			"status":      "error",
-			"message":     "Internal server error",
-			"status_code": fiber.StatusInternalServerError,
+		return context.Status(fiber.StatusInternalServerError).JSON(ErrorModel{
+			Status:     "error",
+			Message:    "Internal server error",
+			StatusCode: fiber.StatusInternalServerError,
 		})
 	}
 
 	// return response
 
-	return context.Status(fiber.StatusOK).JSON(fiber.Map{
-		"status":      "success",
-		"status_code": fiber.StatusOK,
-		"data": fiber.Map{
-			"username":   user.Username,
-			"user_id":    user.ID,
-			"created_at": user.CreatedAt,
-			"token":      token,
+	return context.Status(fiber.StatusOK).JSON(SigninSuccessResponse{
+		Status:     "success",
+		StatusCode: fiber.StatusOK,
+		Data: SuccessData{
+			Username:  user.Username,
+			UserID:    user.ID,
+			CreatedAt: user.CreatedAt,
+			Token:     token,
 		},
 	})
 
