# handlers/signup.go
@@ -9,15 +9,24 @@ import (
 	"github.com/golang-jwt/jwt/v5"
 )
 
+// @Tags Auth
+//
+// @Router /auth/signup [post]
+// @Summary For new User
+// @Description Signup with username and password, you will receive a token which u will have to provide in the header of subsequent requests at /api gateway
+// @Accept json
+// @Produce json
+// @failure 400,403,404,500 {object} ErrorModel
+// @Param data body SigninInput true "username and password input"
 func Signup(context *fiber.Ctx) error {
 	requestBody := new(SigninInput)
 
 	// checking if there is a parsing error
 	if requestBodyError := context.BodyParser(requestBody); requestBodyError != nil {
-		return context.Status(fiber.StatusBadRequest).JSON(fiber.Map{
-			"status":      "error",
-			"status_code": fiber.StatusBadRequest,
-			"message":     requestBodyError.Error(),
+		return context.Status(fiber.StatusBadRequest).JSON(ErrorModel{
+			Status:     "error",
+			StatusCode: fiber.StatusBadRequest,
+			Message:    requestBodyError.Error(),
 		})
 	}
 
@@ -29,10 +38,10 @@ func Signup(context *fiber.Ctx) error {
 	// Check if the password is strong
 
 	if passwordStrengthErr := utils.IsPasswordStrong(password); passwordStrengthErr != nil {
-		return context.Status(fiber.StatusForbidden).JSON(fiber.Map{
-			"status":      "error",
-			"status_code": fiber.StatusForbidden,
-			"message":     passwordStrengthErr.Error(),
+		return context.Status(fiber.StatusForbidden).JSON(ErrorModel{
+			Status:     "error",
+			StatusCode: fiber.StatusForbidden,
+			Message:    passwordStrengthErr.Error(),
 		})
 	}
 
@@ -41,10 +50,10 @@ func Signup(context *fiber.Ctx) error {
 	user, userMutationError := utils.CreateUser(username, password)
 
 	if userMutationError != nil {
-		return context.Status(fiber.StatusNotFound).JSON(fiber.Map{
-			"status":      "error",
-			"status_code": fiber.StatusNotFound,
-			"message":     userMutationError.Error(),
+		return context.Status(fiber.StatusNotFound).JSON(ErrorModel{
+			Status:     "error",
+			StatusCode: fiber.StatusNotFound,
+			Message:    userMutationError.Error(),
 		})
 	}
 
@@ -63,10 +72,10 @@ func Signup(context *fiber.Ctx) error {
 	token, tokenErr := jwtResponse.SignedString([]byte(os.Getenv("JWT_SECRET")))
 
 	if tokenErr != nil {
-		return context.Status(fiber.StatusInternalServerError).JSON(fiber.Map{
-			"status":      "error",
-			"message":     "Internal server error",
-			"status_code": fiber.StatusInternalServerError,
+		return context.Status(fiber.StatusInternalServerError).JSON(ErrorModel{
+			Status:     "error",
+			Message:    "Internal server error",
+			StatusCode: fiber.StatusInternalServerError,
 		})
 	}
 
